# diskscope

./: .gitignore  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  README.fr.md  README.md  ROADMAP.md  SECURITY.md  diskscope.key.pub  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: USER_GUIDE.md  good-first-issues.md
src/: App.tsx  config.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
src-tauri/src/apps/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/platform/: mod.rs  unix.rs  windows.rs
src-tauri/src/scan/: cache.rs  mod.rs  tree.rs  walker.rs
src-tauri/src/search/: mod.rs  watcher.rs
src/api/: tauri.ts
src/components/AboutView/: AboutView.tsx
src/components/AppsView/: AppRow.tsx  AppsView.tsx  UninstallDialog.tsx
src/components/Layout/: Sidebar.tsx  TopBar.tsx
src/components/OptionsView/: OptionsView.tsx
src/components/ScanView/: EntryRow.tsx  ExtensionTable.tsx  LargestTable.tsx  ScanProgress.tsx  ScanResults.tsx  ScanView.tsx  TreeExplorer.tsx  VolumePicker.tsx
src/components/SearchView/: FilterBar.tsx  SearchHitRow.tsx  SearchView.tsx
src/components/Treemap/: Treemap.tsx  layout.ts
src/components/common/: EmptyRecycleBinButton.tsx  (+8 more)
src/hooks/: useApps.ts  useDebounced.test.ts  useDebounced.ts  useElapsed.ts  useElementSize.ts  useFocusTrap.ts  useFormat.ts  useScan.ts  useSearch.ts  useSelection.ts  useSettings.tsx  useTrash.ts  useTrashActions.tsx  useUpdate.ts
src/i18n/: context.tsx  en.ts  fr.ts  index.ts
src/test/: setup.ts
src/types/: models.ts
src/utils/: format.test.ts  format.ts
