[package]
name = "diskscope"
version = "1.1.2"
description = "DiskScope — disk space scanner, fuzzy search & application uninstaller"
authors = ["DiskScope"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "diskscope_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows = { version = "0.58", features = [
  "Win32_UI_Shell",
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Storage_FileSystem",
] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2"
# Auto-update + relaunch (plugin init is gated by cfg(desktop) in lib.rs).
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Disk scanning & filesystem
jwalk = "0.8"
sysinfo = "0.33"
directories = "5"
bincode = "1.3"
trash = "5"

# Search
nucleo-matcher = "0.3"
rayon = "1"
notify = "6"

# Errors
anyhow = "1"
thiserror = "2"

# Concurrency — non-poisoning locks so a panicked thread can't wedge every
# later command on a poisoned Mutex/RwLock.
parking_lot = "0.12"

# Observability — structured logs, emitted only when RUST_LOG is set so normal
# runs stay silent. Helps diagnose field issues (e.g. why a cache failed to save).
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

